--- a/assets/_sass/foundations/_fonts.scss
+++ b/assets/_sass/foundations/_fonts.scss
@@ -53,3 +53,62 @@ a,
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.file-dragdrop-img{
+	label{
+		display: flex;
+		position: relative;
+		align-content: center;
+		align-items: center;
+		width: 100%;
+		height: 7rem;
+		@media screen and (max-width: 500px){
+			flex-wrap: wrap;
+			height: 15rem;
+		}
+	}
+	span{
+		padding: 1.5rem 1rem 0;
+		margin: 0;
+		margin-left: 1rem;
+		align-content: center;
+		align-items: center;
+		justify-items: center;
+		flex-grow: 1;
+		text-align: center;
+		height: 100%;
+		border: 1px solid $dark;
+		border-radius: 5px;
+		flex-wrap: wrap;
+		@media screen and (max-width: 500px){
+			height: 50%;
+			width: 100%;
+			margin: 0;
+		}
+		.fa{
+			width: 100%;
+			font-size: 2em;
+		}
+	}
+	img{
+		
+		display: block;
+		background: $gray;
+		width: 10rem;
+		height: 100%;
+		border-radius: 5px;
+		@media screen and (max-width: 500px){
+			height: 50%;
+			width: 100%;
+			margin-bottom: 1rem;
+		}
+	}
+	input{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: red;
+		opacity: 0;
+	}
+}
