Markup for Design settings, Church Settings, welcome page, login, guide slide module

--- a/_includes/header-login.html
+++ b/_includes/header-login.html
@@ -1,6 +1,6 @@
 <header class="main-header">
 	<img src="{{site.baserurl}}/assets/images/SimpleChurchTools-dark-logo.svg" alt="">
-	<nav>
+	{% comment %} <nav>
 		<ul>
 			<li>
 				<a href="{{site.baseurl}}/login.html" class="{% if page.title == 'Login'%}active{% endif %}">Login</a>
@@ -9,5 +9,5 @@
 				<a href="{{site.baseurl}}/register.html" class="{% if page.title == 'Register'%}active{% endif %}">Register</a>
 			</li>
 		</ul>
-	</nav>
+	</nav> {% endcomment %}
 </header>
