--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,8 +14,8 @@
 			<ul class="settings visible-desktop" id="navigation-user-settings">
 				<li>Settings
 					<ul>
-						<li><a href="/personal-settings.html">Your Settings</a></li>
-						<li><a href="/church-settings.html">Bible Baptist Church Settings</a></li>
+						<li><a href="/settings-church.html">Church Details</a></li>
+						<li><a href="/settings-design.html">Design Settings</a></li>
 					</ul>
 				</li>
 				<li><a href="#"> <i class="fa fa-sign-out"></i>Logout</a></li>
@@ -39,7 +39,7 @@
 						<img src="{{site.baseurl}}/assets/images/navigation/welcomePage-icon.svg" alt="">
 						<span class="visible-desktop">Welcome Page</span>
 					</a>
-					<a href="/prayers-settings.html" class="config fa fa-cog visible-desktop"></a>
+					<!-- <a href="/prayers-settings.html" class="config fa fa-cog visible-desktop"></a> -->
 				</div>
 			</li>
 			
