--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -18,6 +18,7 @@
 @import 'components/toast';
 @import 'components/pagination';
 @import 'components/planner-service-edit';
+@import 'components/guide-module';
 
 @import 'layouts/login';
 
