--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -53,22 +53,18 @@
 				</div>
 				<ul class="visible-desktop">
 					<li><a href="/ministries-ministries.html" class="active">Ministries</a></li>
-					<li><a href="/ministries-leaders.html" class="active">Ministries</a></li>
+					<li><a href="/ministries-leaders.html" class="active">Leaders</a></li>
 				</ul>
 			</li>
 			
 			<li class="">
 				<div class="title">
-					<a>
+					<a href="/events.html">
 						<img src="{{site.baseurl}}/assets/images/navigation/events-icon.svg" alt="">
 						<span class="visible-desktop">Events</span>
 					</a>
 					<a href="#" class="config fa fa-cog visible-desktop"></a>
 				</div>
-				<ul class="visible-desktop">
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-				</ul>
 			</li>
 			
 			<li class="">
