--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -76,8 +76,10 @@
 					<a href="#" class="config fa fa-cog visible-desktop"></a>
 				</div>
 				<ul class="visible-desktop">
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
+					<li><a href="/pages/regular.html" class="active">Regular About Pages</a></li>
+					<li><a href="/pages/leadership.html" class="active">Leadership</a></li>
+					<li><a href="/pages/beliefs.html" class="active">Beliefs</a></li>
+					<li><a href="/pages/gospel.html" class="active">Gospel</a></li>
 				</ul>
 			</li>
 			
@@ -104,8 +106,8 @@
 					<a href="#" class="config fa fa-cog visible-desktop"></a>
 				</div>
 				<ul class="visible-desktop">
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
+					<li><a href="/blog/posts.html" class="active">Posts</a></li>
+					<li><a href="/blog/categories.html" class="active">Categories</a></li>
 				</ul>
 			</li>
 		
