Markup for: Leadership, Gospel, beliefs, photos, About pages

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -76,25 +76,21 @@
 					<a href="#" class="config fa fa-cog visible-desktop"></a>
 				</div>
 				<ul class="visible-desktop">
-					<li><a href="/pages/regular.html" class="active">Regular About Pages</a></li>
-					<li><a href="/pages/leadership.html" class="active">Leadership</a></li>
-					<li><a href="/pages/beliefs.html" class="active">Beliefs</a></li>
-					<li><a href="/pages/gospel.html" class="active">Gospel</a></li>
+					<li><a href="/pages-regular.html" class="active">Regular About Pages</a></li>
+					<li><a href="/pages-leadership.html" class="active">Leadership</a></li>
+					<li><a href="/pages-beliefs.html" class="active">Beliefs</a></li>
+					<li><a href="/pages-gospel.html" class="active">Gospel</a></li>
 				</ul>
 			</li>
 			
 			<li class="">
 				<div class="title">
-					<a>
+					<a href="/photos.html">
 						<img src="{{site.baseurl}}/assets/images/navigation/photos-icon.svg" alt="">
 						<span class="visible-desktop">Photos</span>
 					</a>
 					<a href="#" class="config fa fa-cog visible-desktop"></a>
 				</div>
-				<ul class="visible-desktop">
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-					<li><a href="#" class="active">Lorem ipsum.</a></li>
-				</ul>
 			</li>
 			
 			<li class="">
