--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -21,6 +21,7 @@
 @import 'components/guide-module';
 
 @import 'layouts/login';
+@import 'layouts/adminTasks';
 
 @import 'pages/dashboard';
 @import 'pages/settings';
