--- a/assets/_sass/foundations/_forms.scss
+++ b/assets/_sass/foundations/_forms.scss
@@ -158,6 +158,9 @@ label {
   display: block;
   margin: .5rem 0 1.5rem;
   color: $dark;
+  input{
+    margin-top: 0.5em;
+  }
 }
 form,
 .form,{
@@ -483,6 +486,68 @@ form,
     }
   }
 }//.form-color-scheme
+
+.form-themes{
+  p{
+    font-weight: 600;
+    font-size: .9rem;
+    display: block;
+    margin: .5rem 0;
+    display: block !important;
+  }
+  label{
+    display: inline-block;
+    vertical-align: top;
+    margin: 0rem 1rem 1rem 0;
+    width: calc(50% - 1rem);
+    margin-right: 1rem;
+    &:nth-last-of-type(odd){
+      margin-right: 0;
+    }
+    @media screen and (max-width: 600px){
+      width: 100%;
+      margin-right: 0;
+    }
+  }
+  input[type="radio"]{
+    position: absolute;
+    visibility: hidden;
+   &:checked + span{
+     background: $light-gray;
+     .overlay{
+      background-color: transparent;
+     }
+   } 
+  }
+  span{
+    min-width: 10rem;
+    display: block;
+    border-radius: 5px;
+    border: 1px solid lighten($dark, 50%);
+    text-align: center;
+    cursor: pointer;
+    p{
+      padding: 0.5rem 2rem;
+      font-size: 1.3em;
+    }
+  }
+  figure{
+    width: 100%;
+    height: 13rem;
+    margin: 0;
+    position: relative;
+    border-bottom: 1px solid lighten($dark, 50%);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+  }
+  .overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($white, 0.5);
+  }
+}//.form-themes
 
 // Simple MDE
 // ==================
