Added Administrators settings

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,6 +16,7 @@
 					<ul>
 						<li><a href="/settings-church.html">Church Details</a></li>
 						<li><a href="/settings-design.html">Design Settings</a></li>
+						<li><a href="/settings-users.html">Manage Administrators</a></li>
 					</ul>
 				</li>
 				<li><a href="#"> <i class="fa fa-sign-out"></i>Logout</a></li>
