--- a/assets/_sass/components/_layout.scss
+++ b/assets/_sass/components/_layout.scss
@@ -155,6 +155,12 @@ body.active-sm-navigation{
 		padding-bottom: 1.5rem;
 		max-width: 861px;
 	}
+	table{
+		padding: 0 1rem;
+		@include desktop{
+			margin: 0 2rem;	
+		}
+	}
 }//.card-small
 
 div.alert{
