Removed user pic

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,11 +5,20 @@
 <nav class="navigation" id="main-navigation">
 	<div class="container">
 		<div class="user">
-			<a href="#" id="user-pic" title="View user settings">
+			
+			<!-- <a href="#" id="user-pic" title="View user settings">
 				<img src="https://www.gravatar.com/avatar/fda7191c07def6cbff773b75a91ec8ef.jpg?s=200&d=mm" alt="">
-			</a>
-			<p class="visible-desktop"><a href="#" id="user-name" title="View user settings">Ryan Hayden <i class="fa fa-caret-down"></i></a></p>
-			<span class="visible-desktop">Bible Baptist Church</span>
+			</a> -->
+			
+			<div class="header">
+				<a href="#" id="navigation-sct-logo" class="sct-logo" title="View settings">
+					<img src="/assets/images/Main-Mark-White.png" alt="">
+				</a>
+				<div class="info visible-desktop">
+					<p><a href="#" id="user-name" title="View user settings">Ryan Hayden <i class="fa fa-caret-down"></i></a></p>
+					<span>Bible Baptist Church</span>
+				</div>
+			</div>
 
 			<ul class="settings visible-desktop" id="navigation-user-settings">
 				<li>Settings
@@ -111,5 +120,5 @@
 		</ul><!-- /.menu -->
 	</div> <!-- /.container -->
 
-	<img class="logo visible-desktop" src="{{site.baserurl}}/assets/images/SimpleChurchTools-logo.svg" alt="">
+	<!-- <img class="logo visible-desktop" src="{{site.baserurl}}/assets/images/SimpleChurchTools-logo.svg" alt=""> -->
 </nav>
