--- a/assets/_sass/components/_navigation.scss
+++ b/assets/_sass/components/_navigation.scss
@@ -33,7 +33,7 @@ $navigation-padding: 2rem;
 			width: 70%;
 			margin: 0 0 0.5rem 0;
 			height: auto;
-			border-radius: 50%;
+			// border-radius: 50%;
 			box-shadow: 0px 0px 15px rgba($dark, 0.25);
 		}
 		p{
@@ -148,6 +148,26 @@ $navigation-padding: 2rem;
 		padding: 2rem $navigation-padding/2;
 		bottom: 0;
 	}//.logo
+	.header{
+		padding: 1rem 0;
+		.sct-logo{
+			display: inline-block;
+			vertical-align: middle;
+			@include tablet{
+				width: 5rem;
+			}
+		}
+		.info{
+			width: calc(100% - 6.5rem);
+			display: inline-block;
+			vertical-align: middle;
+			text-align: left;
+			padding-left: 0.5rem;
+			span{
+				margin-bottom: 0;
+			}
+		}
+	}
 }//.navigation
 @media only screen and (max-width: $tablet-width){
 	body.active-sm-navigation{
