--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,12 +10,12 @@
 				<img src="https://www.gravatar.com/avatar/fda7191c07def6cbff773b75a91ec8ef.jpg?s=200&d=mm" alt="">
 			</a> -->
 			
-			<div class="header">
+			<div id="navigation-header" class="header">
 				<a href="#" id="navigation-sct-logo" class="sct-logo" title="View settings">
 					<img src="/assets/images/Main-Mark-White.png" alt="">
 				</a>
 				<div class="info visible-desktop">
-					<p><a href="#" id="user-name" title="View user settings">Ryan Hayden <i class="fa fa-caret-down"></i></a></p>
+					<p><a href="#" title="View user settings">Ryan Hayden <i class="fa fa-caret-down"></i></a></p>
 					<span>Bible Baptist Church</span>
 				</div>
 			</div>
