Redesigned Dashboard and fixed font size on forms.

--- a/assets/_sass/foundations/_forms.scss
+++ b/assets/_sass/foundations/_forms.scss
@@ -24,6 +24,7 @@ a.button,
   cursor: pointer;
   line-height: 1;
   margin: .25rem 0;
+  outline: none;
   &:hover {
     // hover styles
     background-color: darken($blue, 5);
@@ -154,7 +155,9 @@ select {
 
 label {
   font-weight: 600;
-  font-size: .9rem;
+  font-size: 1.05rem;
+  line-height: 1.5em;
+  font-weight: 400;
   display: block;
   margin: .5rem 0 1.5rem;
   color: $dark;
