Redesigned Welcome Page Settings

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -45,7 +45,7 @@
 			
 			<li class="">
 				<div class="title">
-					<a href="/welcomePage.html">
+					<a href="/welcomePage-messaging.html">
 						<img src="{{site.baseurl}}/assets/images/navigation/welcomePage-icon.svg" alt="">
 						<span class="visible-desktop">Welcome Page</span>
 					</a>
