--- a/assets/_sass/foundations/_forms.scss
+++ b/assets/_sass/foundations/_forms.scss
@@ -155,14 +155,17 @@ select {
 
 label {
   font-weight: 600;
-  font-size: 1.05rem;
+  font-size: 1rem;
   line-height: 1.5em;
-  font-weight: 400;
+  font-weight: 600;
   display: block;
   margin: .5rem 0 1.5rem;
   color: $dark;
   input{
     margin-top: 0.5em;
+  }
+  li{
+    font-weight: 400;
   }
 }
 form,
