--- a/assets/_sass/pages/_dashboard.scss
+++ b/assets/_sass/pages/_dashboard.scss
@@ -60,7 +60,7 @@ body.dashboard{
 				width: 100%;
 				min-width: 400px;
 				max-width: unset;
-				font-size: 0.94em;
+				font-size: 0.90em;
 			}
 			tr{
 				border-radius: 5px;
@@ -115,6 +115,13 @@ body.dashboard{
 			}
 			.responses-container{
 				overflow-x: initial;
+			}
+		}
+		@media only screen and (max-width: 350px){
+			.responses{
+				td:nth-last-child(2){
+					display: none;
+				}
 			}
 		}
 		.counter{
