--- a/assets/_sass/pages/_settings.scss
+++ b/assets/_sass/pages/_settings.scss
@@ -17,6 +17,128 @@ body.settings{
 		}
 	}
 }//body.settings
+body.progrDisc{
+	.card-secundary{
+		padding-bottom: 0;
+	}
+	.card-secundary .wrapper{
+		max-width: unset;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap-reverse;
+	}
+	.form{
+		width: calc(66% - 2rem);
+		margin: 0;
+		> div{
+			margin-bottom: 3rem;
+		}
+	}
+	.guide{
+		width: 33.33%;
+		font-size: 0.95rem;
+		
+		h3{
+			margin-top: 0;
+			color: rgba($dark, 0.8);
+		}
+		p{
+			line-height: 1.5em;
+			color: rgba($dark, 0.8);
+		}
+	}
+	@media only screen and (max-width: 1000px){
+		.form{
+			width: 100%;
+		}
+		.guide{
+			width: 100%;
+			display: none;
+		}
+	}//@media only screen and (max-width: 1000px)
+}//body.progrDisc
+.steps-list{
+	position: relative;
+	.overlay{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(90deg, #F5F8FA 0%, rgba(245, 248, 250, 0) 10%, rgba(245, 248, 250, 0) 90%, #F5F8FA 100%);
+		pointer-events: none;
+		z-index: 3;
+	}
+	.scroll{
+		overflow-x: auto;
+	}
+	ul{
+		display: flex;
+		list-style: none;
+		max-width: 700px;
+		padding: 0;
+		margin: 0 auto 2rem;
+		min-width: 700px;
+	}
+	li{
+		flex-grow: 1;
+		text-align: center;
+		position: relative;
+		&:before{
+			content: "";
+			display: block;
+			position: absolute;
+			z-index: 1;
+			top: 1rem;
+			left: 0;
+			width: 50%;
+			height: 3px;
+			background-color: $blue;
+		}
+		&:after{
+			content: "";
+			display: block;
+			position: absolute;
+			z-index: 1;
+			top: 1rem;
+			right: 0;
+			width: 50%;
+			height: 3px;
+			background-color: $blue;
+		}
+		&:first-of-type::before{
+			display: none;
+		}
+		&:last-of-type:after{
+			display: none;
+		}
+	}
+	.number{
+		display: block;
+		position: relative;
+		z-index: 2;
+		line-height: 2em;
+		width: 2em;
+		margin: 0 auto;
+		border-radius: 50%;
+		background-color: #B7D8FF;
+		color: $white;
+		text-align: center;
+		text-decoration: none;
+		&.active{
+			background-color: $blue;
+		}
+	}
+	p{
+		padding: 0 0.5em;
+		font-size: 0.8rem;
+		strong{
+			font-size: 1rem;
+			display: block;
+			margin: 0 0 0.5em;
+		}
+	}
+}
 
 body.prayers-settings{
 	.categories .form{
