Added view website button and badge to get people to pay.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,8 +4,10 @@
 {% endcomment %}
 <nav class="navigation" id="main-navigation">
 	<div class="container">
+		
+		<a href="" class="trial-badge visible-desktop">Trial mode <i class="fa fa-question-circle"></i></a>
+		
 		<div class="user">
-			
 			<!-- <a href="#" id="user-pic" title="View user settings">
 				<img src="https://www.gravatar.com/avatar/fda7191c07def6cbff773b75a91ec8ef.jpg?s=200&d=mm" alt="">
 			</a> -->
