--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
     {% include navigation.html %}
     <main class="page-content" aria-label="Content" id="main-content">
       <div class="wrapper">
+        <a href="#" id="trial-remainder" class="trial-remainder"> Trial Model - ¡Buy Now! <button id="trial-remainder-close" class="close fa fa-times"></button></a>
+        <div class="button-viewsite-container">
+          <a href="#" class="button button-viewsite">VIEW SITE</a>
+        </div>
         {% if page.header == "simple"%}
           {% include header-simple.html %}
         {% else %}
