--- a/assets/_sass/components/_navigation.scss
+++ b/assets/_sass/components/_navigation.scss
@@ -192,3 +192,28 @@ $navigation-padding: 2rem;
 		}//.navigation
 	}//body.active-sm-navigation
 }// @media only screen and (max-width: $tablet-width)
+
+.trial-badge{
+	display: block;
+	margin: 0 auto;
+	width: 95%;
+	position: relative;
+	top: -0.5rem;
+	padding: 0.75em 1em;
+	background-color: #FF6828;
+	border-radius: 0 0 5px 5px;
+	color: $white;
+	line-height: 1em;
+	text-decoration: none;
+	font-size: 0.9em;
+	&:hover{
+		background-color: darken(#FF6828, 10%);
+	}
+	i{
+		margin-left: 0.5em;
+	}
+	+ *{
+		margin-top: 0 !important;
+		padding-top: 0 !important;
+	}
+}
